--- a/login.html
+++ b/login.html
@@ -1,30 +1,33 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/main.css">
 
-    <!-- Vendor CSS Files -->
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/form.css" rel="stylesheet">
 
-    <title>Login</title>
+  <title>Login</title>
 </head>
+
 <body>
-    <!-- ======= Header ======= -->
+  <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
@@ -50,44 +53,44 @@
     </div>
   </header><!-- End Header -->
 
-    <main class="h-100 d-flex justify-content-center align-items-center">
+  <main class="h-100 d-flex justify-content-center align-items-center">
+    <center>
+      <div>
         <div>
-            <div>
-                <h1>Login</h1>
-            </div>
-
-            <form>
-                <div class="form-group">
-                    <input class="form-control item" type="text" id="name" placeholder="Organisation name">
-
-                </div>
-                <div class="form-group">
-                    <input class="form-control item" type="text" id="name" placeholder="Owner name">
-                </div>
-                <div class="form-group">
-                    <input class="form-control item" type="password" id="password" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <a class="green_button" role="button" href="home.html">Login</a>
-                </div>
-                
-            </form> 
-            <div class="form_question">
-                <p>
-                    Don't have an organisation?
-                    <a href="registration.html">Create</a>
-                </p>
-            </div>
+          <h1>Login</h1>
         </div>
-    </main>
+        <form>
+          <div class="form-group">
+            <input class="form-control item" id="input" type="text" name="name" placeholder="Organisation name">
+          </div>
+          <div class="form-group">
+            <input class="form-control item" id="input" type="text" name="name" placeholder="Owner name">
+          </div>
+          <div class="form-group">
+            <input class="form-control item" id="input" type="password" name="password" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <a class="green_button" role="button" href="home.html">Login</a>
+          </div>
 
-    <footer class="my-footer d-flex justify-content-center align-items-center">
-        <div class="credits">
-            Designed by <a href="https://www.spectrumcs.co.bw/">Spectrum Analytics</a>
+        </form>
+        <div class="form_question">
+          <p>
+            Don't have an organisation?
+            <a href="registration.html">CREATE</a>
+          </p>
         </div>
-    </footer>
+      </div>
+    </center>
+  </main>
 
-    <!-- Vendor JS Files -->
+  <footer class="my-footer d-flex justify-content-center align-items-center">
+    <div class="credits">
+      Designed by <a href="https://www.spectrumcs.co.bw/">Spectrum Analytics</a>
+    </div>
+  </footer>
+
+  <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -102,4 +105,5 @@
   <script src="assets/js/add_feature.js"></script>
   <script src="assets/js/drag_and_drop.js"></script>
 </body>
+
 </html>
