--- a/registration.html
+++ b/registration.html
@@ -80,7 +80,7 @@
                 <div class="form_question">
                     <p>
                         Already have an account?
-                        <a href="login.html">Login</a>
+                        <a href="login.html">LOGIN</a>
                     </p>
                 </div>
             </div>
