--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 				<li><a class="nav-link scrollto active" href="index.html">Home</a></li>
 				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
 				<li><a class="nav-link scrollto" href="userProfile.html">User Profile</a></li>
-				<li><a class="nav-link scrollto" href="orgProfile.html">Company Profile</a></li>
+				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
