--- a/orgProfile.html
+++ b/orgProfile.html
@@ -13,6 +13,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="assets/css/iem.css">
+    <link rel="stylesheet" href="assets/css/profile_style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -39,15 +41,14 @@
 				<li><a class="nav-link scrollto" href="home.html">Home</a></li>
 				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
 				<li><a class="nav-link scrollto" href="userProfile.html">User Profile</a></li>
-				<li><a class="nav-link scrollto active" href="orgProfile.html">Company Profile</a></li>
+				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
 			</nav><!-- .navbar -->
 		</div>
 	</header><!-- End Header -->
-
-    <main class="container">
+    <main class="container mt-3">
         <div class="row gutters-sm">
             <div class="col-md-4 d-none d-md-block">
                 <div class="card">
@@ -94,10 +95,9 @@
                                     <input type="email" class="form-control" id="email" placeholder="@gmail.com"
                                         value="">
                                 </div>
-                                <button type="button" class="btn btn-primary rounded-pill"
-                                    style="background: rgb(25,28,147);">Update
+                                <button type="button" class="edit_green_button">Update
                                     Profile</button>
-                                <button type="reset" class="btn btn-light rounded-pill">Reset Changes</button>
+                                <button type="reset" class="reset_red_button">Reset Changes</button>
                             </form>
                         </div>
                         <div class="tab-pane" id="account">
@@ -110,7 +110,7 @@
                                         going back. Please be
                                         certain.</p>
                                 </div>
-                        <a class="btn btn-danger rounded-pill" data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Delete Organisation</a>
+                        <a class="reset_red_button" data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Delete Organisation</a>
                             </form>
                         </div>
                     </div>
