--- a/viewOrganisationProfile.html
+++ b/viewOrganisationProfile.html
@@ -13,6 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="assets/css/iem.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -24,7 +25,7 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 
-    <title>Profile | User</title>
+    <title>Profile | Organisation</title>
 </head>
 <body>
 	 <!-- ======= Header ======= -->
@@ -38,8 +39,8 @@
 				<ul>
 				<li><a class="nav-link scrollto" href="home.html">Home</a></li>
 				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
-				<li><a class="nav-link scrollto active" href="userProfile.html">User Profile</a></li>
-				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
+				<li><a class="nav-link scrollto" href="userProfile.html">User Profile</a></li>
+				<li><a class="nav-link scrollto active" href="viewOrganisationProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
@@ -53,11 +54,14 @@
 					<div class="card">
 						<div class="card-body">
 							<div class="d-flex flex-column align-items-center text-center">
-								<img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
+								<img src="https://www.bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle"
 									width="150">
 								<div class="mt-3">
-									<h4>aubrey@spectrum</h4>
-									<p class="text-secondary mb-1">Spectrum Analytics</p>
+									<h4>Spectrum Analytics</h4>
+									<p class="text-secondary mb-1">Aubrey Johnson</p>
+                                    <div class="form-group">
+                                        <a class="edit_green_button" href="orgProfile.html">Edit Profile</a>
+                                    </div>  
 								</div>
 							</div>
 						</div>
@@ -68,37 +72,37 @@
 						<div class="card-body">
 							<div class="row">
 								<div class="col-sm-3">
-									<h6 class="mb-0">Username</h6>
-								</div>
-								<div class="col-sm-9 text-secondary">
-								aubrey@spectrum
-								</div>
-							</div>
-							<hr>
-							<div class="row">
-								<div class="col-sm-3">
-									<h6 class="mb-0">Full Name</h6>
-								</div>
-								<div class="col-sm-9 text-secondary">
-									Aubrey Johnson 
-								</div>
-							</div>
-							<hr>
-							<div class="row">
-								<div class="col-sm-3">
-									<h6 class="mb-0">Email</h6>
-								</div>
-								<div class="col-sm-9 text-secondary">
-									aubrey@gmail.com
-								</div>
-							</div>
-							<hr>
-							<div class="row">
-								<div class="col-sm-3">
 									<h6 class="mb-0">Organisation Name</h6>
 								</div>
 								<div class="col-sm-9 text-secondary">
-									Spectrum Analytics
+								Spectrum Analytics
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Organisation Email</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									spectrum@google.com 
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Owner Name</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									Aubrey Johnson
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Owner Email</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									aubrey@spectrum
 								</div>
 							</div>
 							<hr>
