--- a/home.html
+++ b/home.html
@@ -1,7 +1,8 @@
 <html lang="en">
 <head>
-
-
+	<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-analytics.js"></script>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -191,13 +192,21 @@
 	<script src="assets/vendor/php-email-form/validate.js"></script>
 	<script src="assets/vendor/purecounter/purecounter.js"></script>
 	<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-
-
-
 	<!-- Template Main JS File -->
 	<script src="assets/js/main.js"></script>
-
 	<!--Home scripts-->
 	<script src="assets/js/home_search.js"></script>
+
+	<script>
+		 // =============== //Put firebaseConfig.js here=======================
+
+
+		// Your web app's Firebase configuration
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+		firebase.analytics();
+		const db = firebase.firestore();
+        db.settings({timestampInSnapshots:true});
+	  </script>
 </body>
 </html>
