--- a/iem.html
+++ b/iem.html
@@ -1,6 +1,10 @@
 <html lang="en">
 
 <head>
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-analytics.js"></script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -140,6 +144,18 @@
   <script src="assets/js/add_feature.js"></script>
   <script src="assets/js/drag_and_drop.js"></script>
   <script src="assets/js/expand_quadrants.js"></script>
+
+<script>
+  // =============== //Put firebaseConfig.js here=======================
+
+
+  // Your web app's Firebase configuration
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+  const db = firebase.firestore();
+  db.settings({timestampInSnapshots:true});
+</script>
 
 </body>
 
