--- a/addEmployees.html
+++ b/addEmployees.html
@@ -67,7 +67,7 @@
                     <div class="row">
                       <div class="col">
                         <label for="fileUpload" class="purple_button">Upload file </label>  
-                        <input id="fileUpload" type="file"/>
+                        <input type="file" id="fileUpload" />
                       </div>
                       <div class="col"><a class="green_button" data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Complete</a></div>
                       
@@ -82,6 +82,7 @@
                     </p>
             </div>
         </center>
+        <script src="assets/js/fileUpload.js"></script>
     </main>
 
     <!-- Add employees confirmation modal -->
@@ -120,7 +121,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/fileUpload.js"></script>
+  
 
   <!--IEM scripts-->
   <script src="assets/js/add_feature.js"></script>
