Added firebase to home.html

--- a/home.html
+++ b/home.html
@@ -78,6 +78,7 @@
 					<th>Project Name</th>
 					<th>Project description</th>
 					<th>Status</th>
+					<th>Custom</th>
 				</tr>
 			</thead>
 			<tbody id="project-list">
