Fix Navigation errors

--- a/employees.html
+++ b/employees.html
@@ -34,11 +34,12 @@
 				<h1><a href="index.html"><span>Impact Effort Matrix</span></a></h1>
 				<!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 			</div>
+
 			<nav id="navbar" class="navbar">
 				<ul>
 				<li><a class="nav-link scrollto" href="home.html">Home</a></li>
-				<li><a class="nav-link scrollto active" href="#">Employees</a></li>
-				<li><a class="nav-link scrollto" href="viewUserProfile.html">View User Profile</a></li>
+				<li><a class="nav-link scrollto active" href="employees.html">Employees</a></li>
+				<li><a class="nav-link scrollto" href="viewUserProfile.html">User Profile</a></li>
 				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
