--- a/home.html
+++ b/home.html
@@ -52,9 +52,9 @@
 
 			<nav id="navbar" class="navbar">
 				<ul>
-				<li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+				<li><a class="nav-link scrollto active" href="home.html">Home</a></li>
 				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
-				<li><a class="nav-link scrollto" href="viewUserProfile.html">View User Profile</a></li>
+				<li><a class="nav-link scrollto" href="viewUserProfile.html">User Profile</a></li>
 				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
@@ -67,7 +67,7 @@
 		<a class="edit_green_button" data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Create
 			Project</a>
 		<div class="pt-3">
-			<input style="border-radius: 25px;" type="text" placeholder="Type here to search for projects"
+			<input type="text" placeholder="Type here to search for projects"
 				class="input-sm form-control" id="searchInput" onkeyup="home_search()">
 		</div>
 		<table class="table table-hover p-table container mt-4" id="listOfProjects">
