--- a/iem.html
+++ b/iem.html
@@ -40,6 +40,9 @@
           <nav id="navbar" class="navbar">
             <ul>
               <li><a class="nav-link scrollto active" href="home.html">Home</a></li>
+              <li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
+			    <li><a class="nav-link scrollto" href="viewUserProfile.html">User Profile</a></li>
+				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
               <li><a class="nav-link scrollto" href="index.html">Logout</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
@@ -98,16 +101,18 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLongTitle">Add Feature</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
                                 </div>
                                 <div class="modal-body">
                                     <form id="addFeatureForm">
-                                        <input type="text" name="AddFeatureContent" placeholder="feature">
-                                        <button type="submit" class="green_button">Save changes</button>
+                                        <textarea name="AddFeatureContent" placeholder="feature" style="width: 100%;"></textarea>
                                     </form>
                                 </div>
                                 <div class="modal-footer">
-                                        <button type="button" class="red_button" data-dismiss="modal">Close</button>
-                                        
+                                    <button type="button" class="red_button" data-dismiss="modal">Close</button>
+                                    <button type="submit" class="green_button">Add</button>    
                                 </div>
                             </div>
                             </div>
