--- a/viewOrganisationProfile.html
+++ b/viewOrganisationProfile.html
@@ -29,18 +29,19 @@
 </head>
 <body>
 	 <!-- ======= Header ======= -->
-	 <header id="header" class="d-flex align-items-center">
+	<header id="header" class="d-flex align-items-center">
 		<div class="container d-flex align-items-center justify-content-between">
 			<div class="logo">
 				<h1><a href="index.html"><span>Impact Effort Matrix</span></a></h1>
 				<!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 			</div>
+
 			<nav id="navbar" class="navbar">
 				<ul>
 				<li><a class="nav-link scrollto" href="home.html">Home</a></li>
-				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
-				<li><a class="nav-link scrollto" href="userProfile.html">User Profile</a></li>
-				<li><a class="nav-link scrollto active" href="viewOrganisationProfile.html">Company Profile</a></li>
+				<li><a class="nav-link scrollto active" href="employees.html">Employees</a></li>
+				<li><a class="nav-link scrollto" href="viewUserProfile.html">User Profile</a></li>
+				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
