--- a/viewOrganisationProfile.html
+++ b/viewOrganisationProfile.html
@@ -39,9 +39,9 @@
 			<nav id="navbar" class="navbar">
 				<ul>
 				<li><a class="nav-link scrollto" href="home.html">Home</a></li>
-				<li><a class="nav-link scrollto active" href="employees.html">Employees</a></li>
+				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
 				<li><a class="nav-link scrollto" href="viewUserProfile.html">User Profile</a></li>
-				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
+				<li><a class="nav-link scrollto active" href="viewOrganisationProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
