Added some minor styling changes

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="nav-link scrollto" href="login.html">Account</a></li>
+          <!-- <a href="login.html"><button class="nav-link scrollto" id="account_green_button">Account</button> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
