--- a/registration.html
+++ b/registration.html
@@ -44,6 +44,8 @@
           <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
           <li><a class="nav-link scrollto" href="index.html#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
+          <li><a class="nav-link scrollto active" href="login.html">Account</a></li>
+          <!-- <a href="login.html"><button class="btn" id="account_green_button">Account</button> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -78,7 +80,7 @@
                 <div class="form_question">
                     <p>
                         Already have an account?
-                        <a href="login.html">LOGIN</a>
+                        <a href="login.html">Login</a>
                     </p>
                 </div>
             </div>
