--- a/employees.html
+++ b/employees.html
@@ -64,7 +64,7 @@
 			<input type="text" placeholder="Type here to search for employees"
 				class="input-sm form-control" id="searchInput" onkeyup="home_search()">
 		</div>
-		<table class="table table-hover p-table container" id="listOfProjects">
+		<table class="table table-hover p-table container mt-4" id="listOfProjects">
 			<thead>
 				<tr class="header">
 					<th>Employee Name</th>
