--- a/userProfile.html
+++ b/userProfile.html
@@ -43,7 +43,7 @@
 				<ul>
 				<li><a class="nav-link scrollto" href="index.html">Home</a></li>
 				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
-				<li><a class="nav-link scrollto active" href="viewUserProfile.html">User Profile</a></li>
+				<li><a class="nav-link scrollto" href="viewUserProfile.html">User Profile</a></li>
 				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
