--- a/viewUserProfile.html
+++ b/viewUserProfile.html
@@ -44,7 +44,7 @@
 				<ul>
 				<li><a class="nav-link scrollto" href="home.html">Home</a></li>
 				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
-				<li><a class="nav-link scrollto active" href="userProfile.html">User Profile</a></li>
+				<li><a class="nav-link scrollto active" href="viewUserProfile.html">User Profile</a></li>
 				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
@@ -52,7 +52,7 @@
 			</nav><!-- .navbar -->
 		</div>
 	</header><!-- End Header -->
-    <div class="container">
+    <div class="container mt-4">
         <div class="main-body">
           <div class="row gutters-sm">
             <div class="col-md-4 mb-3">
@@ -64,6 +64,9 @@
                     <div class="mt-3">
                       <h4>aubrey@spectrum</h4>
                       <p class="text-secondary mb-1">Spectrum Analytics</p>
+					  <div class="form-group">
+						<a class="edit_green_button" href="userProfile.html">Update Profile</a>
+					</div> 
                     </div>
                   </div>
                 </div>
@@ -114,9 +117,6 @@
           </div>
         </div>
       </div>
-	  <div class="container">
-		<a class="home_green_button"  role="button" href="userProfile.html">Update Profile</a>
-	</div>
 	<footer class="my-footer d-flex justify-content-center align-items-center">
 		<div class="credits">
 			Designed by <a href="https://www.spectrumcs.co.bw/">Spectrum Analytics</a>
