Added close modal button

--- a/home.html
+++ b/home.html
@@ -100,8 +100,9 @@
 						<div class="form-group">
 							<textarea name="description" class="form-control item" placeholder="Project description"></textarea>
 						</div>
-						<div class="form-group">
-							<button class="modal_green_button" role="button">Create</button>
+						<div class="modal-footer">
+							<button type="button" class="red_button" data-dismiss="modal">Close</button>
+							<button type="submit" class="modal_green_button">Create</button>    
 						</div>
 					</form>
 				</div>
